--- a/HW1/airQuality/src/main/resources/templates/index.html
+++ b/HW1/airQuality/src/main/resources/templates/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>My Weather App</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
+    <style>
+    body {
+        background-image: url("https://img.freepik.com/premium-vector/blue-sky-with-clouds-seamless-pattern-background_266639-247.jpg");
+        background-size: cover;
+    }
+    .card {
+        border: 3px solid #007bff;
+    }
+    .card-body {
+        margin: 1rem;
+    }
+    </style>
+    <title>Air Quality</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-<h2>Weather</h2>
-<!--<p>aqi: <span th:text="${weather.aqi}"></span></p>-->
-<!--<p>Humidity: <span th:text="${weather.humidity}"></span></p>-->
-<!--<p>Wind Speed: <span th:text="${weather.windSpeed}"></span></p>-->
+<div th:fragment="header">
+    <nav class="navbar navbar-dark bg-secondary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="https://www.svgrepo.com/show/327830/air-quality-control-management-environment-ecology-purifier-pollution.svg" width="35" height="35" class="d-inline-block align-top" alt="Air Quality logo"/>
+                Air Quality
+            </a>
+        </div>
+    </nav>
+</div>
+<div class="container-fluid py-4" style="background: none;">
+    <div class="card mx-auto" style="max-width: 30rem;">
+        <div class="card-body">
+            <h5 class="card-title">Check Air Quality Around the World!</h5>
+            <form action="/weatherFromCity" method="get">
+                <div class="form-group">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control my-3" id="inputCity" name="cityName" placeholder="Lisbon"/>
+                </div>
+                <button type="submit" class="btn btn-primary my-3">Enter</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"
+></script>
 </body>
 </html>
