Selenium web test and documentation config

--- a/HW1/airQuality/src/main/resources/templates/weather.html
+++ b/HW1/airQuality/src/main/resources/templates/weather.html
@@ -36,7 +36,7 @@
       <tbody>
       <tr>
         <td>Name</td>
-        <td th:text="${weather.getCityName()}"></td>
+        <td th:text="${weather.getCityName()}" id="cityName"></td>
       </tr>
       <tr>
         <td>Aqi</td>
